2001-03-09  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* coop.c: Inserted #include <stdio.h>.

	* iselect.c: Reinserted #include <stdio.h>.

2001-03-10  Marius Vollmer  <mvo@zagadka.ping.de>

	* posix.c: Replaced `#define' of __USE_XOPEN right before
	including unistd.h with a define of _GNU_SOURCE at the very top of
	the file.

2001-03-09  Keisuke Nishida  <kxn30@po.cwru.edu>

	* alist.c, arbiters.c, async.c, backtrace.c, boolean.c, chars.c,
	continuations.c, debug-malloc.c, debug.c, dynwind.c, eq.c, eval.c,
	feature.c, filesys.h, gc_os_dep.c, gh_data.c, gh_eval.c,
	gh_funcs.c, gh_io.c, gh_list.c, gh_predicates.c, hash.c,
	hashtab.c, iselect.c, keywords.c, list.c, load.c, mallocs.c,
	net_db.c, numbers.c, objprop.c, objprop.h, options.c, pairs.c,
	print.c, procprop.c, procs.c, properties.c, ramap.c,
	regex-posix.c, root.c, scmsigs.c, simpos.c, socket.c, srcprop.c,
	stackchk.c, stacks.c, strings.c, strop.c, strorder.c, struct.c,
	symbols.c, tag.c, threads.c, variable.c, vectors.c, weaks.c:
	Remove #include <stdio.h>	
	* gc.c, gdbint.c, root.c, sort.c, unif.c: Add #include <string.h>.

	* procs.c (scm_make_subr_opt): Init symcell to avoid warning.

2001-03-09  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* posix.c (scm_gethostname): Set initial name length to 256 for
	Solaris.

2001-03-09  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* posix.h (scm_crypt, scm_chroot, scm_getlogin, scm_cuserid),
	(scm_getpriority, scm_setpriority, scm_getpass, scm_flock),
	(scm_sethostname, scm_gethostname): New prototypes.

	* posix.c: Added inclusion of <crypt.h>, <sys/resource.h> and
	<sys/file.h>, if present.
	(scm_init_posix): [PRIO_PROCESS, PRIO_PGRP, PRIO_USER, LOCK_SH,
	LOCK_EX, LOCK_UN, LOCK_NB]: New variables.
	(scm_crypt, scm_chroot, scm_getlogin, scm_cuserid),
	(scm_getpriority, scm_setpriority, scm_getpass, scm_flock),
	(scm_sethostname, scm_gethostname): New procedures.

2001-03-08  Neil Jerram  <neil@ossau.uklinux.net>
